# nush

./: .env.example  .gitignore  Pipfile  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/server/: .env.example  README.md  package.json  pyproject.toml
apps/server/app/: __init__.py  app.py  auth_helpers.py  config.py  extensions.py  model_helpers.py  models.py
apps/server/app/routes/: __init__.py  admin.py  auth.py  carts.py  guest_cart.py  me.py  memberships.py  menus.py  orders.py  payments.py  promotions.py  response.py  restaurant_admin.py  restaurants.py  serializers.py  validators.py  webhooks.py
apps/server/app/services/: cart_totals.py  email_service.py  stripe_client.py
apps/server/app/templates/emails/: base.html  email_verification.html  internal_account_notification.html  invitation.html  marketing.html  order_receipt.html  order_status_update.html  password_changed.html  password_reset.html  payment_failed.html  payment_method_updated.html  (+1 more)
apps/server/migrations/: README  alembic.ini  env.py
apps/server/migrations/versions/: 2bd7e873f2fb_create_models.py  60cb4a17a107_add_payment_restaurant_attribution_and_.py  7c3ea981864b_add_verification_and_reset_tokens.py  8b2f3c9a1d2e_add_cart_snapshots_and_totals.py  9a9b6588e843_add_verification_columns.py  d3684eed2e98_add_stock_tracking_to_menu_items.py  f42b17b988ed_add_stock_fields_again.py
apps/server/nush_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/server/scripts/: seed.py  seed_demo.py  seed_rbac.py  smoke_api.sh
apps/server/tests/: test_routes_smoke.py
docs/: api.md  (+4 more)
(+50 files in other folders)
